# prepfil_dsn

./: README.md
filterbank_utils/: .gitignore  CMakeLists.txt  README  example_conf  example_scan  pulsars
filterbank_utils/CMakeModules/: FindFFTW.cmake
filterbank_utils/exec/: CMakeLists.txt  mkfb.cpp  prepfil.cpp  test.cpp
filterbank_utils/src/: Barycenter.cpp  Barycenter.hpp  BaselineRemover.hpp  BaselineRemover_CPU.cpp  BaselineRemover_GPU.cu  BaselineRemover_NO_CPU.cpp  BaselineRemover_NO_GPU.cpp  CMakeLists.txt  CUDA.hpp  MakeFilterbank.cpp  MakeFilterbank.hpp  MakeFilterbankConfig.cpp  MakeFilterbankConfig.hpp  MakeFilterbankConfig.proto  PulsarCatalog.cpp  PulsarCatalog.hpp  RFIMask.cpp  RFIMask.hpp  ScanFile.cpp  ScanFile.hpp  SigProc.cpp  SigProc.hpp  SigProcHeader.cpp  SigProcHeader.hpp  SigProcUtil.cpp  SigProcUtil.hpp  utils.cpp  utils.hpp
filterbank_utils/tests/: CMakeLists.txt
filterbank_utils/tests/make_filterbank/: CMakeLists.txt  conf_short_flip  conf_short_no-flip  conf_very_short  make_filterbank.cpp  short_big_endian.dada  short_little_endian.dada  slcp_short_flip.fil  slcp_short_no-flip.fil  slcp_very_short_res.fil  srcp_short_flip.fil  srcp_short_no-flip.fil  srcp_very_short_res.fil  very_short_big_endian.dada  xlcp_short_flip.fil  xlcp_short_no-flip.fil  xlcp_very_short_res.fil  xrcp_short_flip.fil  xrcp_short_no-flip.fil  xrcp_very_short_res.fil
filterbank_utils/tests/make_filterbank_config/: CMakeLists.txt  make_filterbank_config.cpp
filterbank_utils/tests/sigproc_file/: CMakeLists.txt  input  sigproc_file.cpp
filterbank_utils/tests/sigproc_util/: CMakeLists.txt  avg  bandpass  bandpass_corrected  base  bp  dec_6  input.filterbank  output.filterbank  sigproc_util.cpp
